[gd_scene load_steps=4 format=3 uid="uid://d032j54llwkca"]

[ext_resource type="PackedScene" uid="uid://5f8uxavn1or1" path="res://src/ui_elements/color_edit.tscn" id="1_am2ca"]
[ext_resource type="Script" path="res://src/ui_elements/setting_color.gd" id="1_ohlh1"]
[ext_resource type="Texture2D" uid="uid://cvh3kwbucf2n1" path="res://visual/icons/Reload.svg" id="3_0jhv7"]

[node name="SettingColor" type="HBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 26.0
grow_horizontal = 2
script = ExtResource("1_ohlh1")

[node name="Label" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 13

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 10
theme_type_variation = &"DarkPanel"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="ColorEdit" parent="PanelContainer/HBoxContainer" instance=ExtResource("1_am2ca")]
layout_mode = 2
size_flags_horizontal = 2
enable_palettes = false
enable_alpha = true

[node name="ResetButton" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
focus_mode = 0
mouse_default_cursor_shape = 2
theme_type_variation = &"FlatButton"
icon = ExtResource("3_0jhv7")

[connection signal="value_changed" from="PanelContainer/HBoxContainer/ColorEdit" to="." method="_on_color_edit_value_changed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
